<resources>
    <string name="app_name">RadarPokemon</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_permission_denied">You need to allow GPS usage for this app to work correctly.</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="disclaimer">We recommmend that you create a dummy account at Pokemon Trainer Club to use in this app.</string>
    <string name="empty_fields">Missing information</string>
    <string name="login_loading">Loading&#8230;</string>
    <string name="login_failed_try_again">Login failed, try again.</string>
    <string name="cancel">Cancel</string>
    <string name="pokemon_found">Pokemon Found!</string>
    <string name="pokemon_fround_text">Some pokemons you want are nearby!</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="notify">Notify</string>
    <string name="all">All</string>
    <string name="none">None</string>
</resources>
