<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/login_warning_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/disclaimer"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"
        android:text="@string/cancel"/>

</LinearLayout>